2010-04-11  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/bugs2010.input.pamphlet: exhibit failuire in coercion
	code when types with constant parameters are involved.

2010-04-08  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: add requirements for tab completion of
	file names.

2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lib/sockio-c.c, src/include/sockio-c.H1,
	src/sman/sman.c: Shorten startup/shutdown delays.

2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix problem with building graphic examples.
	* src/algebra/view3D.spad.pamphlet: makeViewport3D(): Do
	not trash old viewport.
	src/algebra/view2D.spad.pamphlet: makeViewport2D(): Likewise.
	src/hyper/pages/ug07.ht, src/input/mobius.input: Close
	viewports.

2010-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc (mostly whitespace) cleanup.
	* src/include/htadd.H1, src/include/session.H1,
	src/include/sman.H1, src/include/spadbuf.H1,
	src/include/spadclient.H1, src/include/useproto.h: Remove.
	src/clef/edible.c, src/graph/*/*, src/hyper/*,
	src/include/*, src/lib/*, src/sman/*,
	src/interp/primitives.lisp, src/interp/clammed.boot:
	Whitespace cleanup. Clean up header formatting.  Move
	static declarations form headers to corresponding files.
	Makefile.in, src/algebra/Makefile.in, src/interp/Makefile.in:
	Clean up.
	src/sman/Makefile.in, src/graph/Gdraws/Makefile.in,
	src/clef/Makefile.in: Adjust.

2010-03-30  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet,
	src/input/mantepse.input.pamphlet: cleanup options for checking
	solutions.

2010-03-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modmonom.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet,
	src/interp/i-util.boot, src/interp/parsing.lisp,
	src/interp/patches.lisp, src/interp/ht-util.boot,
	src/interp/server.boot, src/interp/util.lisp,
	src/interp/i-spec2.boot, src/interp/g-opt.boot,