@@ -164,9 +164,13 @@ This variable is buffer-local."
   (let ((st (make-syntax-table)))
     (modify-syntax-entry ?$  ".   " st)
     (modify-syntax-entry ?%  ".   " st)
+    (modify-syntax-entry ?\\ ".   " st)
+    (modify-syntax-entry ?*  ".   " st)
+    (modify-syntax-entry ?-  ".   " st)
+    (modify-syntax-entry ?+  ".   " st)
+    (modify-syntax-entry ?/  ".   " st)
     (modify-syntax-entry ?!  "w   " st)
     (modify-syntax-entry ??  "w   " st)
-    (modify-syntax-entry ?\\ "w   " st)
     (modify-syntax-entry ?_  "\   " st)
     st)
   "Syntax table used while in `fricas-mode'.")
