@@ -1,3 +1,7 @@
+2010-04-28  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el: correct syntax table.
+
 2010-04-11  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* src/input/bugs2010.input.pamphlet: exhibit failuire in coercion
